--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<html><body>ecdsap256sha256.pw</body></html>
+<html>
+  <body>
+    <h1>ecdsap256sha256.pw</h1>
+    <a href="http://dnsviz.net/d/ecdsap256sha256.pw/dnssec/">DNSViz</a>
+  </body>
+</html>
